<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">572155172914348</string>
    <string name="action_search">"Events happening tonight"</string>
    <string name="menu_item1">"Popular tonight</string>
    <string name="menu_item2">"Upcoming events"</string>
    <string name="popular1">Popular Right Now</string>
    <string name="upcomming">Upcoming Events</string>
    <string name="location">Location: </string>
    <string name="event_title">Event Title That\'s Really Long</string>
    <string name="empty"></string>
    <string name="time">Time</string>
    <string name="popularity">Popularity</string>
    <string name="distance">Distance</string>
    <string name="data">Event data</string>
    <string name="title_activity_description">Event Details</string>
    <string name="title_activity_new_event">Create a New Event</string>

</resources>
