<!--<menu xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context=".MainActivity" >-->
    <!--<item android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:showAsAction="never" />-->
<!--</menu>-->

<!--<menu xmlns:android="http://schemas.android.com/apk/res/android" >-->
<!--&lt;!&ndash; Search, should appear as action button &ndash;&gt;-->
<!--<item android:id="@+id/action_search"-->
    <!--android:icon="@drawable/ic_drawer"-->
    <!--android:title="@string/action_search"-->
    <!--android:showAsAction="ifRoom" />-->
<!--&lt;!&ndash; Settings, should always be in the overflow &ndash;&gt;-->
<!--<item android:id="@+id/action_settings"-->
    <!--android:title="@string/action_settings"-->
    <!--android:showAsAction="never" />-->
<!--</menu>-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/action_settings"
    android:title="@string/action_search"
    android:showAsAction="ifRoom|withText"
    android:color="#fd0ca5ff"/>
<group android:id="@+id/group">
    <item android:id="@+id/group_item1"
        android:title="@string/popular1"
        android:titleCondensed="popular"
        android:icon="@drawable/ic_drawer" />
    <item android:id="@+id/group_item2"
        android:title="@string/upcomming"
        android:titleCondensed="upcoming"
        android:icon="@drawable/ic_drawer" />
</group>
</menu>


