<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical">


    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_row="9"
            android:layout_column="9"
            android:id="@drawable/">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/event_title"
                android:id="@+id/textView"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="64dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:layout_toEndOf="@+id/textView"
                android:layout_marginLeft="28dp"
                android:numStars="4"
                android:stepSize="1"
                android:layout_alignBottom="@+id/textView"
                android:layout_toRightOf="@+id/textView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/time"
                android:id="@+id/textView2"
                android:layout_below="@+id/ratingBar"
                android:layout_alignLeft="@+id/ratingBar"
                android:layout_alignStart="@+id/ratingBar"
                android:layout_marginLeft="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:src="@drawable/redcup-small" />
        </RelativeLayout>
    </GridLayout>
</RelativeLayout>
